# scvelo-trajectory-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
evidence/reports/: benchmark_report.json
scvelo-trajectory-benchmark/src/: data_loader.py
scvelo-trajectory-benchmark/tests/: test_data_loader.py
src/: __init__.py  data_loader.py  pipeline.py  preprocessing.py  velocity.py  visualization.py
src/benchmark/: __init__.py  evaluator.py  validators.py
tests/: __init__.py  conftest.py  test_benchmark_evaluator.py  test_benchmark_validators.py  test_data_loader.py  test_fixtures.py  test_preprocessing.py  test_velocity.py
